--- a/no_page.html
+++ b/no_page.html
@@ -11,7 +11,7 @@
         <h1>nenu ante neeku ishtama ?</h1>
         <div class="buttons">
             <button class="yes" onclick="handleYesClick()">Yes</button>
-            <button class="no" onclick="handleNoClick()">No</button>
+            <button class="no" onclick="handleNoClick()">Are you Sure? 🤔</button>
         </div>
         <div class="gif_container" >
         <img src="https://media1.tenor.com/m/Sv5tDcikePEAAAAd/jinmiram-rohee.gif" alt="Cute GIF" >
