--- a/yes_page.html
+++ b/yes_page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">naku telsu le nenu ante neeku ishtam ani :smirk: </h1>
+        <h1 class="header_text">naku telsu le nenu ante neeku ishtam ani 😏 </h1>
         <div class="gif_container">
             <img src="https://i.pinimg.com/originals/39/78/b1/3978b16ccb1f908c34d4eede25ffcc60.gif">
         </div>
