--- a/no_page.html
+++ b/no_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Do you Like me ?</title>
+    <title>nenu ante neeku ishtama?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
             <button class="yes" onclick="handleYesClick()">Yes</button>
             <button class="no" onclick="handleNoClick()">Are you Sure? 🤔</button>
         </div>
-        <div class="gif_container" >
-        <img src="https://media1.tenor.com/m/Sv5tDcikePEAAAAd/jinmiram-rohee.gif" alt="Cute GIF" >
+        <div class="gif_container">
+            <img src="https://media1.tenor.com/m/Sv5tDcikePEAAAAd/jinmiram-rohee.gif" alt="Cute GIF">
         </div>
     </div>
     <script src="script.js"></script>
