--- a/yes_page.html
+++ b/yes_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>naku telsu le nenu ante neeku ishtam ani :smirk:</title>
+    <title>naku telsu le nenu ante neeku ishtam ani 😏</title>
     <link rel="stylesheet" href="./yes_style.css">
 </head>
 <body>
